# Kagzi

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BIG_REFACTOR.md  CHANGELOG.md  CONSOLIDATION_PLAN.md  CORE_EXECUTION_REVIEW.md  Cargo.toml  Dockerfile  Dockerfile.server  IMPLEMENTATION.md  Justfile  Makefile  NAMESPACE_MIGRATION.md  PARALLEL_EXECUTION_TESTING.md  PLAN.md  PROTO_REVIEW.md  README.md  ROADMAP.md  Simplify_plan.md  TRACING.md  check_test_status.sh  clorinde.md  docker-compose.yml  dprint.json  final-plan.md  gRPC.md  init.sql  integration-tests.md  myreview.md  new_plan.md  package-lock.json  reviewopus.md  river_refactor.md  rustfmt.toml  schema.sql  simpliffication.md  (+6 more)
.sqlx/: query-00d08032a98cebd278c8247645ea9ee816eb7a1ccf78bdee42318813138a51de.json  query-021b797a13a9187b0945df93e7cb384350dc6baa099c734c4ab131875ed13395.json  query-024a71edfe45a379af0d83bde32444ca3d210419fd234275116f7cdc3f74b807.json  query-032bd5db08466113f2e77c60210fb145fa8930dd1b776cd5ee8170a451a6ef3c.json  query-074b28372d06a6558104490497e56220b82e96b705ac8a061590ee054baafbba.json  query-0ba3b7d0d8b251ab0ff4e10453d18eb60d761a88bcb07cc385ab1386b211f6b9.json  query-0c5976d175f37c4f205c6ab273718f01ff00417d585a2b0384612a21e8ef7d5e.json  query-0f45bba98d9069395231517827ec49d868bc4d827d2b1bb62aa36a7df49690d0.json  query-148e7fce18019c92c22fc2c6b6d706bc8f2bf38137a0cbade28ace75cb5e103e.json  query-1571e7e33e8bc2950e1f200313951d45fa99f1e6d5385f822570bebd74cdad79.json  query-172f838aed573ec8de549421bb870bde27f756b56912b74810c1104ae98b0a30.json  (+126 more)
crates/examples/: Cargo.toml  common.rs  comprehensive_demo.rs  health_check_client.rs  observability_demo.rs  simple.rs  traced_workflow.rs  twitter_example.rs  worker_hub.rs  worker_only.rs
crates/examples/01_basics/: main.rs
crates/examples/02_error_handling/: main.rs
crates/examples/03_scheduling/: main.rs
crates/examples/04_concurrency/: main.rs
crates/examples/05_fan_out_in/: main.rs
crates/examples/06_long_running/: main.rs
crates/examples/07_idempotency/: main.rs
crates/examples/08_saga_pattern/: main.rs
crates/examples/09_data_pipeline/: main.rs
crates/examples/10_multi_queue/: main.rs
crates/examples/examples/: comprehensive_demo.rs  health_check_client.rs  observability_demo.rs  observability_test.rs  simple.rs  sleep_failover.rs  twitter_example.rs
crates/kagzi/: Cargo.toml  README.md
crates/kagzi-core/: Cargo.toml
crates/kagzi-core/src/: db.rs  error.rs  lib.rs  models.rs  queries.rs  retry.rs
crates/kagzi-proto/: Cargo.toml  README.md  build.rs
crates/kagzi-proto/src/: lib.rs
crates/kagzi-queue/: Cargo.toml
crates/kagzi-queue/src/: error.rs  lib.rs  postgres.rs  traits.rs
crates/kagzi-server/: Cargo.toml  README.md
crates/kagzi-server/src/: admin_service.rs  config.rs  constants.rs  coordinator.rs  embedded_assets.rs  helpers.rs  lib.rs  main.rs  namespace_service.rs  proto_convert.rs  reaper.rs  scheduler.rs  service.rs  tracing_utils.rs  watchdog.rs  work_distributor.rs  worker_service.rs  workflow_schedule_service.rs  workflow_service.rs
crates/kagzi-server/src/telemetry/: init.rs  mod.rs  propagation.rs
crates/kagzi-server/tests/: integration_tests.rs  schedules.rs
crates/kagzi-server/tests/common/: mod.rs
crates/kagzi-store/: Cargo.toml  README.md
crates/kagzi-store/src/: error.rs  lib.rs
crates/kagzi-store/src/models/: mod.rs  namespace.rs  pagination.rs  schedule.rs  step.rs  worker.rs  workflow.rs  workflow_schedule.rs
crates/kagzi-store/src/postgres/: health.rs  mod.rs  namespace.rs  pagination.rs  payload.rs  query.rs  schedule.rs  step.rs  worker.rs  workflow.rs  workflow_schedule.rs
crates/kagzi-store/src/postgres/workflow/: helpers.rs  mod.rs  notify.rs  queue.rs  state.rs
crates/kagzi-store/src/repository/: health.rs  mod.rs  namespace.rs  payload.rs  schedule.rs  step.rs  worker.rs  workflow.rs  workflow_schedule.rs
crates/kagzi/benches/: parallel_performance.rs
crates/kagzi/examples/: advanced_parallel.rs  batch_processing.rs  comprehensive_test.rs  data_pipeline.rs  health_monitoring.rs  observability_test.rs  order_fulfillment.rs  parallel_execution.rs  retry_pattern.rs  scheduled_reminder.rs  simple.rs  step_retry_policies.rs  traced_workflow.rs  twitter_example.rs  welcome_email.rs  worker_management.rs  worker_only.rs  workflow_versioning.rs
crates/kagzi/src/: client.rs  context.rs  errors.rs  health.rs  lib.rs  parallel.rs  tracing_utils.rs  versioning.rs  worker.rs  workflow_context.rs
crates/kagzi/tests/: integration_test.rs  parallel_edge_cases_test.rs
crates/tests/: Cargo.toml
crates/tests/src/: common.rs  lib.rs
crates/tests/tests/: concurrency_limits.rs  integration_tests.rs  schedule_integration.rs  schedules.rs
crates/tests/tests/common/: mod.rs
crates/tests/tests/e2e/: concurrency.rs  mod.rs  resilience.rs  scheduling.rs  sleep.rs  workers.rs  workflow.rs
crates/tests/tests/service/: admin_api.rs  mod.rs  schedule_api.rs  worker_api.rs  workflow_api.rs
examples/: Cargo.toml  README.md  TUI.md  common.rs  health_check_client.rs  real_life_demo.rs  tui.rs  worker_hub.rs
examples/01_basics/: main.rs
examples/02_error_handling/: main.rs
examples/03_scheduling/: main.rs
examples/04_concurrency/: main.rs
examples/05_fan_out_in/: main.rs
examples/06_long_running/: main.rs
examples/07_idempotency/: main.rs
examples/08_saga_pattern/: main.rs
examples/09_data_pipeline/: main.rs
examples/10_multi_queue/: main.rs
examples/11_macros/: README.md  main.rs
examples/11_schedule_test/: README.md  main.rs
examples/12_backfill_demo/: README.md  main.rs
examples/12_kagzi_step_macro/: main.rs
examples/13_kagzi_workflow_macro/: main.rs
examples/14_macros_comprehensive/: main.rs
examples/separate_files/: Cargo.toml  README.md
examples/separate_files/src/: lib.rs  main.rs  trigger.rs  types.rs  worker.rs  workflows.rs
sdk/kagzi-rs/: Cargo.toml  README.md
sdk/kagzi-rs/src/: client.rs  context.rs  errors.rs  lib.rs  propagation.rs  retry.rs  tracing_utils.rs  worker.rs  workflow_context.rs
(+156 files in other folders)
