[workspace]
resolver = "3"
members = ["crates/kagzi-proto", "crates/kagzi-server", "crates/kagzi"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/spa5k/kagzi"
authors = ["Kagzi Contributors"]

[workspace.dependencies]
# gRPC / Protobuf
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database (for server)
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
