[workspace]
resolver = "3"
members = [
    "crates/kagzi",
    "crates/kagzi-proto",
    "crates/kagzi-server",
    "crates/kagzi-store",
    "crates/examples",
    "crates/tests",
]

[workspace.package]
version = "0.1.0"
authors = ["Kagzi Contributors"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/spa5k/kagzi"

[workspace.dependencies]
# Async traits
async-trait = "0.1"

# gRPC / Protobuf
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.15.19"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Enum utilities
strum = { version = "0.27.2", features = ["derive"] }

# Database (for server)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# UUID
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15.0"

# Utilities
tokio-util = "0.7"
backoff = "0.4"
