[workspace]
resolver = "3"
members = [
  "crates/kagzi",
  "crates/kagzi-proto",
  "crates/kagzi-server",
  "crates/kagzi-store",
  "crates/tests",
  "examples",
  "examples/separate_files",
]

[workspace.package]
version = "0.0.1-alpha.1"
authors = ["Kagzi Contributors"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/spa5k/kagzi"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
backoff = "0.4"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.19"
cron = "0.15.0"
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
