[package]
name = "examples"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
crossterm = "0.29.0"
futures = { workspace = true }
hostname = { workspace = true }
kagzi = { path = "../sdk/kagzi-rs" }
kagzi-proto = { path = "../crates/kagzi-proto" }
rand = { workspace = true }
ratatui = { version = "0.30", features = ["crossterm_0_29"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true, features = ["transport"] }
uuid = { workspace = true }

[[example]]
name = "01_basics"
path = "01_basics/main.rs"

[[example]]
name = "02_error_handling"
path = "02_error_handling/main.rs"

[[example]]
name = "03_scheduling"
path = "03_scheduling/main.rs"

[[example]]
name = "04_concurrency"
path = "04_concurrency/main.rs"

[[example]]
name = "05_fan_out_in"
path = "05_fan_out_in/main.rs"

[[example]]
name = "06_long_running"
path = "06_long_running/main.rs"

[[example]]
name = "07_idempotency"
path = "07_idempotency/main.rs"

[[example]]
name = "08_saga_pattern"
path = "08_saga_pattern/main.rs"

[[example]]
name = "09_data_pipeline"
path = "09_data_pipeline/main.rs"

[[example]]
name = "10_multi_queue"
path = "10_multi_queue/main.rs"

[[example]]
name = "11_schedule_test"
path = "11_schedule_test/main.rs"

[[example]]
name = "12_backfill_demo"
path = "12_backfill_demo/main.rs"

[[example]]
name = "worker_hub"
path = "worker_hub.rs"

[[example]]
name = "tui"
path = "tui.rs"

[[example]]
name = "real_life_demo"
path = "real_life_demo.rs"
