[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2024"

[dependencies]
anyhow = { workspace = true }
kagzi = { path = "../kagzi" }
kagzi-proto = { path = "../kagzi-proto" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true }
chrono = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
hostname = "0.4.2"

