[package]
name = "kagzi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["serde", "v4"] }

# Error handling
anyhow = "1"
thiserror = "2.0.17"

# Random number generation (for retry jitter)
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System information
hostname = "0.4"
