[package]
name = "kagzi-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true
serde.workspace = true
tonic-prost.workspace = true
prost-types = "0.14.1"

[build-dependencies]
tonic-prost-build = "0.14.2"
