[package]
name = "kagzi-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost.workspace = true
prost-types = "0.14.1"
serde.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
tonic-prost-build = "0.14.2"
