[package]
name = "kagzi-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "kagzi_server"
path = "src/lib.rs"

[[bin]]
name = "kagzi-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22"
chrono.workspace = true
config.workspace = true
cron.workspace = true
kagzi-proto = { path = "../kagzi-proto" }
kagzi-queue = { path = "../kagzi-queue" }
kagzi-store = { path = "../kagzi-store" }
md5 = "0.8.0"
prost.workspace = true
prost-types = "0.14.1"
rand = "0.9.2"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = "0.7"
tonic.workspace = true
tonic-reflection.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[features]
default = []

[dev-dependencies]
testcontainers = "0.26.0"
testcontainers-modules = { version = "0.14.0", features = ["postgres"] }
tokio-test = "0.4"
