[package]
name = "kagzi-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "kagzi_server"
path = "src/lib.rs"

[[bin]]
name = "kagzi-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = "0.8"
base64.workspace = true
chrono.workspace = true
config.workspace = true
cron.workspace = true
governor.workspace = true
kagzi-proto = { path = "../kagzi-proto" }
kagzi-queue = { path = "../kagzi-queue" }
kagzi-store = { path = "../kagzi-store" }
md5.workspace = true
mime_guess = "2"
opentelemetry.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry-stdout.workspace = true
opentelemetry_sdk.workspace = true
prost.workspace = true
prost-types.workspace = true
rand.workspace = true
rust-embed = "8"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tonic-web = "0.14"
tonic-prost = "0.14.2"
tonic-reflection.workspace = true
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.5"
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[features]
default = []

[dev-dependencies]
testcontainers = "0.26.0"
testcontainers-modules = { version = "0.14.0", features = ["postgres"] }
tokio-test = "0.4"
