[package]
name = "kagzi-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "kagzi_store"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
backoff.workspace = true

