[package]
name = "kagzi-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "kagzi_store"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
backoff.workspace = true
chrono.workspace = true
md5 = "0.8.0"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
