[package]
name = "kagzi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kagzi-proto = { path = "../kagzi-proto" }
tonic = { workspace = true, features = ["transport"] }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = "0.3"
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tracing-subscriber.workspace = true
