[package]
name = "kagzi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
kagzi-proto = { path = "../kagzi-proto" }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true, features = ["transport"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
uuid = { workspace = true }
hostname = "0.4.2"
tokio-util = { workspace = true }

[dev-dependencies]
tracing-subscriber.workspace = true
