[package]
name = "kagzi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
hostname = "0.4.2"
kagzi-macros = { path = "../kagzi-macros" }
kagzi-proto = { path = "../kagzi-proto" }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
uuid = { workspace = true }

[dev-dependencies]
tracing-subscriber.workspace = true
