[package]
name = "tests"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
kagzi = { path = "../../sdk/kagzi-rs" }
kagzi-proto = { path = "../kagzi-proto" }
kagzi-queue = { path = "../kagzi-queue" }
kagzi-server = { path = "../kagzi-server" }
kagzi-store = { path = "../kagzi-store" }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
testcontainers = "0.26.0"
testcontainers-modules = { version = "0.14.0", features = ["postgres"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
tracing = { workspace = true }
uuid = { workspace = true }
