[package]
name = "separate_files_example"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[[bin]]
name = "trigger"
path = "src/trigger.rs"

[dependencies]
anyhow = "1.0"
kagzi = { path = "../../crates/kagzi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
