[package]
name = "separate_files_example"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[[bin]]
name = "trigger"
path = "src/trigger.rs"

[dependencies]
anyhow = { workspace = true }
kagzi = { path = "../../crates/kagzi" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }
