[package]
name = "separate_files_example"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[[bin]]
name = "trigger"
path = "src/trigger.rs"

[dependencies]
anyhow = { workspace = true }
kagzi = { path = "../../sdk/kagzi-rs" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
