[package]
name = "kagzi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
backon = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
humantime = { workspace = true }
kagzi-proto = { path = "../../crates/kagzi-proto" }
opentelemetry = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
tower = { workspace = true }
tower-layer = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
